# personal

./: .cfignore  .gitignore  deploy.sh  index.html  meeting-brief.html
kr-acc/backend/: Dockerfile  pyproject.toml
kr-acc/backend/alembic/: alembic.ini  env.py
kr-acc/backend/app/: auth.py  config.py  database.py  main.py
kr-acc/backend/app/api/: assets.py  bills.py  graph.py  labeling.py  parties.py  politicians.py  stats.py  votes.py
kr-acc/backend/app/models/: __init__.py  labeling_models.py  models.py
kr-acc/backend/app/schemas/: labeling_schemas.py  schemas.py
kr-acc/backend/app/services/: bill_service.py  graph_service.py  labeling_service.py  politician_service.py  vote_service.py
kr-acc/backend/etl/: __init__.py  __main__.py  api_client.py  config.py  db.py  flows.py  transforms.py
kr-acc/backend/tests/: conftest.py
kr-acc/backend/tests/test_api/: test_assets.py  (+8 more)
kr-acc/etl/: Dockerfile  pyproject.toml
kr-acc/etl/assembly_client/: __init__.py  client.py  endpoints.py  models.py
kr-acc/etl/dart_client/: __init__.py  client.py
kr-acc/etl/data/: assets_template.csv  funds_template.csv
kr-acc/etl/flows/: __init__.py  compute_co_sponsorship.py  import_assets.py  scrape_likms_votes.py  scrape_newstapa.py  sync_all.py  sync_bills.py  sync_companies.py  sync_historical_politicians.py  sync_politicians.py  sync_votes.py
kr-acc/etl/scrapers/: likms.py  newstapa.py
kr-acc/etl/tasks/: __init__.py  extract.py  load.py  transform.py  validate.py
kr-acc/etl/tests/: conftest.py  test_assembly_client.py  test_scrapers.py  test_transform.py
(+144 files in other folders)
